@@ -3577,6 +3577,10 @@ public class FSNamesystem implements FSConstants, FSNamesystemMBean, FSClusterSt
    * @throws IOException
    */
   synchronized void enterSafeMode() throws IOException {
+    // Ensure that any concurrent operations have been fully synced
+    // before entering safe mode. This ensures that the FSImage
+    // is entirely stable on disk as soon as we're in safe mode.
+    getEditLog().logSyncAll();
     if (!isInSafeMode()) {
       safeMode = new SafeModeInfo();
       return;
